Added /deactivateaccount  /changepassword, updated permissions