@@ -3,24 +3,24 @@ package com.todo.todoapp.auth;
 
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 import static com.todo.todoapp.auth.Permission.*;
+import static com.todo.todoapp.auth.Permission.ADMIN_CREATE;
+import static com.todo.todoapp.auth.Permission.ADMIN_DELETE;
+import static com.todo.todoapp.auth.Permission.ADMIN_READ;
+import static com.todo.todoapp.auth.Permission.ADMIN_UPDATE;
 
 @RequiredArgsConstructor
 public enum Role {
 
-    USER(
-            Set.of(
-                    USER_READ,
-                    USER_UPDATE,
-                    USER_CREATE
-            )
-    ),
+    USER(Collections.emptySet()),
+
     ADMIN(
             Set.of(
                     ADMIN_READ,
@@ -35,6 +35,7 @@ public enum Role {
     @Getter
     private final Set<Permission> permissions;
 
+
     public List<SimpleGrantedAuthority> getAuthorities() {
         var authorities = getPermissions()
                 .stream()
@@ -43,6 +44,15 @@ public enum Role {
         authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
         return authorities;
     }
+
+    /*  public List<SimpleGrantedAuthority> getAuthorities() {
+        var authorities = new HashSet<>(getPermissions())
+                .stream()
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());
+        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+        return authorities;
+    }*/
 
 }
 
